--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "bootstrap": "^5.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "framer-motion": "^10.16.1",
     "next": "13.4.13",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "sass": "^1.65.1"
   },
   "devDependencies": {
